# pyspark-app-template

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml  init.sh
.devcontainer/ubuntu/: Dockerfile
src/pyspark_app_template/my_modules/: MyClass.py  __init__.py  my_functions.py
tests/app/etc/: config.yml
tests/app/notebooks/: dev.ipynb
tests/docker_spark/: docker-compose.yml
tests/docker_spark/master/: Dockerfile
tests/docker_spark/worker/: Dockerfile
