[tool.poetry]
name = "pyspark-app-template"
version = "0.1.0"
description = ""
authors = ["Nick <n.cardelli2@outlook.it>"]

[tool.poetry.dependencies]
python = "^3.8"
pyspark = "^3.2.1"

[tool.poetry.dev-dependencies]
ipykernel = "^6.11.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
